# rstatus

./: .gitignore  README.md  pyproject.toml
handlers/: __init__.py  java_handler.py
models/: __init__.py  bedrock_server_data.py
packets/: __init__.py  base.py  handshake.py  login_start.py
src/rstatus/: __init__.py  main_client.py
src/rstatus/handlers/: bedrock_handler.py
src/rstatus/models/: java_server_data.py
src/rstatus/protocol/: version.py
src/rstatus/utils/: client.py
utils/: clear.py  compression.py  resolver.py  response.py
